# omnipair-indexer

./: .dockerignore  .env.example  .gitignore  API.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.grpc  Dockerfile.indexer  Makefile  QUICKSTART.md  README.md  SETUP.md  bun.lockb  env.template  package-lock.json  package.json  railway.toml  test-schema.js  test-startup.js  tsconfig.json
.github/workflows/: rust-ci.yml
api/: .env.example  README.md  nodemon.json  package-lock.json  package.json  railway.toml  tsconfig.json
api/src/: app.ts  index.ts  test-pair-state.ts
api/src/config/: database.ts  idl-loader.ts  program.ts
api/src/controllers/: dataController.ts
api/src/database/: schema.sql
api/src/idl/: omnipair.mainnet.json
api/src/middleware/: errorHandler.ts
api/src/routes/: dataRoutes.ts  index.ts  poolRoutes.ts  positionRoutes.ts  swapRoutes.ts  userRoutes.ts
api/src/scripts/: backfillVolume.ts  fillEmaPrices.ts  volumeEnricher.ts
api/src/services/: LpValueService.ts  PairStateService.ts
api/src/types/: index.ts  omnipair.mainnet.ts  pairTypes.ts
api/src/utils/: cache.ts  emaCalculator.ts  index.ts  pairSimulation.ts  rateCalculator.ts  rpc-client.ts
database/: .env.example  README.md
database/drizzle/: 0000_legal_havok.sql
database/drizzle/meta/: 0000_snapshot.json  _journal.json
database/lib/: schema.ts
database/migrations/: 000_add_position_notify_trigger.sql  000_add_swaps_notify_trigger.sql  001_create_schema.sql  002_add_swaps_notify_trigger.sql  003_add_slot_column.sql  004_add_visibility_and_whitelisted_tokens.sql  005_add_util_rate_params.sql  006_change_pools_visible_default.sql
database/scripts/: apply_003_migration.sh  apply_004_migration.sh  apply_005_migration.sh  apply_all_migrations.sh  apply_migrations.sh  clone_from_prod.sh  imitate_swaps_stream.sh  imitate_user_positions_stream.sh  init_db.sh
grpc/: Cargo.toml  build.rs  env.example  railway.toml
grpc/proto/: stream.proto
grpc/src/: db_listener.rs  grpc_server.rs  main.rs
indexer/: Cargo.toml  README.md  build.rs  railway.toml
indexer/crates/core/: Cargo.toml
indexer/crates/core/src/: account.rs  datasource.rs  instruction.rs  pipeline.rs  transaction.rs  transformers.rs
indexer/crates/macros/: Cargo.toml
indexer/crates/proc-macros/: Cargo.toml
indexer/crates/proc-macros/src/: lib.rs
indexer/crates/test-utils/: Cargo.toml
indexer/crates/test-utils/src/: base58_deserialize.rs  lib.rs
indexer/datasources/helius-atlas-ws-datasource/: Cargo.toml
indexer/datasources/rpc-program-subscribe-datasource/: Cargo.toml
indexer/datasources/rpc-program-subscribe-datasource/src/: lib.rs
indexer/datasources/rpc-transaction-crawler-datasource/: Cargo.toml
indexer/datasources/rpc-transaction-crawler-datasource/src/: lib.rs
indexer/decoders/omnipair_decoder/: Cargo.toml  mod.rs
indexer/decoders/omnipair_decoder/src/: lib.rs
indexer/decoders/omnipair_decoder/src/accounts/: futarchy_authority.rs  leveraged_position.rs  mod.rs  pair.rs  rate_model.rs  user_position.rs
indexer/decoders/omnipair_decoder/src/instructions/: add_collateral.rs  add_liquidity.rs  adjust_collateral_event.rs  adjust_debt_event.rs  adjust_liquidity_event.rs  borrow.rs  burn_event.rs  claim_protocol_fees.rs  deleverage.rs  distribute_tokens.rs  faucet_mint.rs  flashloan.rs  flashloan_event.rs  init_futarchy_authority.rs  initialize.rs  leverage.rs  leverage_position_created_event.rs  leverage_position_updated_event.rs  liquidate.rs  mint_event.rs  mod.rs  pair_created_event.rs  remove_collateral.rs  remove_liquidity.rs  repay.rs  swap.rs  swap_event.rs  update_futarchy_authority.rs  update_pair_event.rs  update_protocol_revenue.rs  user_liquidity_position_updated_event.rs  user_position_created_event.rs  user_position_liquidated_event.rs  user_position_updated_event.rs  view_pair_data.rs  view_user_position_data.rs
indexer/decoders/omnipair_decoder/src/types/: add_collateral_and_borrow_args.rs  add_liquidity_args.rs  adjust_collateral_event.rs  adjust_debt_event.rs  adjust_liquidity_event.rs  adjust_position_args.rs  burn_event.rs  claim_protocol_fees_args.rs  common_fields.rs  deleverage_args.rs  distribute_tokens_args.rs  emit_value_args.rs  event_metadata.rs  flashloan_args.rs  flashloan_event.rs  futarchy_authority.rs  init_futarchy_authority_args.rs  initialize_and_bootstrap_args.rs  leverage_args.rs  leverage_position_created_event.rs  leverage_position_updated_event.rs  leveraged_position.rs  mint_event.rs  mod.rs  pair.rs  pair_created_event.rs  pair_view_kind.rs  rate_model.rs  remove_liquidity_args.rs  revenue_distribution.rs  revenue_recipients.rs  revenue_share.rs  swap_args.rs  swap_event.rs  update_futarchy_authority_args.rs  update_pair_event.rs  update_protocol_revenue_args.rs  user_liquidity_position_updated_event.rs  user_position.rs  user_position_created_event.rs  (+3 more)
indexer/metrics/log-metrics/: Cargo.toml
indexer/metrics/log-metrics/src/: lib.rs
indexer/metrics/prometheus-metrics/: Cargo.toml
indexer/metrics/prometheus-metrics/src/: lib.rs
indexer/proto/: position_stream.proto  stream.proto
indexer/src/: config.rs  database.rs  datasources.rs  db_listener.rs  grpc_server.rs  health.rs  lib.rs  main.rs  pipeline.rs  processors.rs  signals.rs  websocket_server.rs
src/: connection.ts  index.ts  priceHandler.ts  txLogHandler.ts
src/decoders/omnipair_decoder/: Cargo.toml
src/jupiter-swap-alerts/: Cargo.toml
src/jupiter-swap-alerts/src/: main.rs
src/logger/: logger.ts
src/omnipair-carbon-indexer/: Cargo.toml  README.md
src/omnipair-rs/: Cargo.toml
src/omnipair-rs/programs/omnipair/: Cargo.toml
src/omnipair_indexer/: index.ts
src/omnipair_indexer/backfill/: index.ts
src/omnipair_indexer/events/: index.ts
src/omnipair_indexer/processors/: logParser.ts  transactionProcessor.ts
src/v3_indexer/: constants.ts  index.ts  snapshot.ts
src/v3_indexer/backfill/: daos.ts  proposals.ts  (+2 more)
src/v4_indexer/: filler.ts  indexer.ts  processor.ts  snapshot.ts
src/v5_indexer/: connection.ts  filler.ts  indexer.ts  processor.ts  snapshot.ts
(+66 files in other folders)
