[workspace]
members = [
    "src/omnipair-rs/programs/omnipair",
    "src/jupiter-swap-alerts",
    "src/block-crawler"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Exinity Team"]
license = "MIT"
repository = "https://github.com/Exinity/omnipair-indexer"
description = "Omnipair Indexer - A comprehensive blockchain indexer for the Omnipair protocol on Solana"

[workspace.dependencies]
# Carbon framework dependencies
carbon-core = "0.9.1"
carbon-jupiter-swap-decoder = "0.9.1"
carbon-log-metrics = "0.9.1"
carbon-pumpfun-decoder = "0.9.1"
carbon-rpc-block-crawler-datasource = "0.9.1"
carbon-yellowstone-grpc-datasource = "0.9.1"

# Common dependencies
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
solana-instruction = "3.0"
solana-transaction-status = "3.0"
tokio = { version = "1.0", features = ["full"] }
yellowstone-grpc-proto = "1.0"
rustls = { version = "0.23.0", default-features = false, features = ["std", "aws_lc_rs"] }

# Anchor dependencies
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "event-cpi", "derive", "event-cpi"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-math = { version = "0.3.0", features = ["no-entrypoint"] }
spl-memo = "4.0.0"

# Other dependencies
solana-security-txt = "1.1.1"
num-traits = "0.2.19"
uint = "0.9.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
arrayref = "0.3.6"

# Dev dependencies
quickcheck = "0.9"
proptest = "1.0"
rand = "0.8.5"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
