[workspace]
members = [
    "indexer/crates/core", 
    "indexer/crates/macros", 
    "indexer/crates/proc-macros", 
    "indexer/crates/test-utils", 
    "indexer/metrics/*", 
    "indexer/datasources/*", 
    "indexer/decoders/*", 
    "indexer"
]
resolver = "2"

[workspace.package]
rust-version = "1.82"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/omnipair/omnipair-indexer"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "allow"  # Too noisy for moderate strictness

[workspace.lints.clippy]
# Lint groups - set with lower priority so individual lints can override
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

# Correctness lints - deny level (catch actual bugs)
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"

# Error handling
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Documentation
missing_errors_doc = "allow"  # Good practice but too noisy for moderate
missing_panics_doc = "allow"  # Good practice but too noisy for moderate

# Code quality
missing_const_for_fn = "allow"  # Nice to have but too pedantic for moderate
must_use_candidate = "allow"  # Nice to have but too pedantic for moderate
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
needless_lifetimes = "warn"

# Reduce noise - allow level
too_many_arguments = "allow"
type_complexity = "allow"
module_name_repetitions = "allow"
similar_names = "allow"

[workspace.dependencies]

# carbon crates (local)
carbon-core = { path = "indexer/crates/core", version = "0.9.1" }
carbon-macros = { path = "indexer/crates/macros", version = "0.9.1" }
carbon-proc-macros = { path = "indexer/crates/proc-macros", version = "0.9.1" }
carbon-test-utils = { path = "indexer/crates/test-utils", version = "0.9.1" }
carbon-log-metrics = { path = "indexer/metrics/log-metrics", version = "0.9.1" }
carbon-rpc-program-subscribe-datasource = { path = "indexer/datasources/rpc-program-subscribe-datasource", version = "0.9.1" }
carbon-rpc-transaction-crawler-datasource = { path = "indexer/datasources/rpc-transaction-crawler-datasource", version = "0.9.1" }
carbon-helius-atlas-ws-datasource = { path = "indexer/datasources/helius-atlas-ws-datasource", version = "0.9.1" }
carbon-omnipair-decoder = { path = "indexer/decoders/omnipair_decoder", version = "0.9.1" }

# misc
anyhow = "1.0.96"
async-stream = "0.3.6"
solana-commitment-config = "~2.2"
async-trait = { version = "0.1.86" }
base64 = "0.22.1"
bincode = "1.3"
borsh = { version = "0.10.4" }
borsh-derive-internal = "0.10.3"
bs58 = { version = "0.5.1", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.30"
helius = "0.2"
hex = "0.4.3"
log = "0.4.25"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
proc-macro2 = "1"
quote = "1.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.138"
syn = { version = "1.0", features = ["full"] }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.43.0", features = ["rt", "time", "signal", "macros"] }
tokio-util = "0.7.13"
uuid = { version = "1.6.1", features = ["serde", "v7"] }

# solana
solana-account = "~2.2"
solana-account-decoder = "~2.2" 
solana-account-decoder-client-types = "~2.2"
solana-client = "~2.2"
solana-clock = "~2.2"
solana-hash = "~2.2"
solana-instruction = { version = "~2.2", default-features = false }
solana-message = "~2.2"
solana-program = "~2.2"
solana-pubkey = { version = "~2.2", features = ["serde", "borsh", "curve25519"] }
solana-signature = { version = "~2.2", features = ["rand"] }
solana-transaction = "~2.2"
solana-transaction-context = "~2.2"
solana-transaction-status = "~2.2"