[package]
name = "omnipair-carbon-indexer"
version = "0.2.1"
edition = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde", "solana-instruction"]

[dependencies]
carbon-core = { workspace = true }
carbon-log-metrics = { workspace = true }
carbon-rpc-program-subscribe-datasource = { workspace = true }
carbon-rpc-transaction-crawler-datasource = { workspace = true }
carbon-helius-atlas-ws-datasource = { workspace = true }
carbon-omnipair-decoder = { workspace = true }
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-commitment-config.workspace = true
solana-instruction = { workspace = true, default-features = false }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction-status = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

# CLI and HTTP server dependencies
clap = { version = "4.4", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }

# Helius types for transaction filtering
helius = { workspace = true }

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal", "uuid"] }
bigdecimal = "0.3"

# WebSocket server dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
