[package]
name = "carbon-omnipair-decoder"
version = "0.9.1"
edition = { workspace = true }
description = "Omnipair decoder for Carbon indexer"
license = { workspace = true }
repository = { workspace = true }
keywords = ["solana", "indexer", "omnipair"]
categories = ["encoding"]

[dependencies]
carbon-core = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
serde = { workspace = true }

[lib]
path = "mod.rs"
crate-type = ["rlib"]
