[package]
name = "omnipair"
version = { workspace = true }
description = "Created with Anchor"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "omnipair"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
cpi-no-ix = ["cpi", "no-log-ix-name"]
no-spl-memo = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
production = []
development = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-math = { workspace = true }
solana-security-txt = { workspace = true }
num-traits = { workspace = true }
spl-memo = { workspace = true }
uint = { workspace = true }
bytemuck = { workspace = true }
arrayref = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }